--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,13 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-
+  font-size: 100%;
+  line-height: 1.3;
   color: #222;
+}
+
+body {
+  padding: 0 1em;
 }
 
 *, *::before, *::after {
@@ -46,4 +51,33 @@ blockquote {
 
 .quote {
   color: #999;
+}
+
+@media only screen and (min-width: 25em) {
+
+}
+
+@media only screen and (min-width: 38em) {
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  article {
+    margin: auto;
+  }
+}
+
+@media only screen and (min-width: 90em) {
+  html {
+    font-size: 130%;
+    line-height: 1.5;
+  }
 }
